# nicholdav-info-jekyll

./: .gitignore  CNAME  Gemfile  Makefile  README.md  _config.yml  blog.html  pyproject.toml
_data/: navigation.yml
_datasets/: 2016-07-30-scipy-proceedings.md  2017-10-18-bengalese-finch-song-repository.md  2017-11-07-cerebellothalamic-thalamostriatal-songbird.md
_includes/: author-profile.html  masthead.html
_pages/: about.md  data.md  datasets.md  talks.md
_posts/: 2020-11-12-welcome-to-jekyll.markdown  2022-03-16-how-to-use-jekyll-to-set-up-your-own-academic-website.md
assets/data/: knn_ftrs_results_dict.json  results_dict.json  same_ftrs_results_dict.json
