[tool.poetry]
name = "nicholdav-info-jekyll"
version = "0.1.0"
description = ""
authors = ["David Nicholson <nickledave@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.8"
ghp-import = "^1.0.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
